<resources>
    <string name="app_name">Oakridge</string>
    <string name="student_id">StudentId</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="grade">Grade</string>
    <string name="age">Age</string>
    <string name="con_password">Confirm Password</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="settings">SETTINGS</string>
    <string name="title">TITLE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home">Home</string>
    <string name="Admissionid">AdmissionId </string>
    <string name="name">Name</string>
    <string name="a">Age</string>
    <string name="section">Section</string>
    <string name="dob">Date Of Birth</string>
    <string name="aadhar">Aadhar Number</string>
    <string name="email">Email</string>
    <string name="pname">Parent Name</string>
    <string name="mobile">Mobile</string>
    <string name="paddress">Address</string>
    <string name="bg">Blood Group</string>

</resources>
